naturalis-common now at 3.0.7